# lab-6

./: .gitmodules  .travis.yml  CMakeLists.txt
include/: Enumeration.hpp
include/1/picosha/test/: test.cpp
picosha/example/: hasher.cpp
picosha/test/: test.cpp
scripts/: checks.sh  coverage.sh  duplication.sh
sources/: main.cpp  source.cpp
tests/: test.cpp
